@@ -44,31 +44,31 @@ Calculations to 30000 K,” NASA RP-1232, 1990.
 #include <model/thermo/_thermo.h>
 #include <model/transport/_transport.h>
 
-double _kappa_from_rhok_T_Te_gnoffo(spec_t rhok, double T, double Te){
+double _kappa_from_rhok_T_Te(spec_t rhok, double T, double Te){
   
 }
 
-double _kappan_from_rhok_T_Te_gnoffo(spec_t rhok, double T, double Te){
+double _kappan_from_rhok_T_Te(spec_t rhok, double T, double Te){
 
 }
 
-double _eta_from_rhok_T_Te_gnoffo(spec_t rhok, double T, double Te){
+double _eta_from_rhok_T_Te(spec_t rhok, double T, double Te){
   
 }
 
-double _etan_from_rhok_T_Te_gnoffo(spec_t rhok, double T, double Te){
+double _etan_from_rhok_T_Te(spec_t rhok, double T, double Te){
   
 }
 
-void find_nuk_from_rhok_T_Te_gnoffo(spec_t rhok, double T, double Te, spec_t nuk){
+void find_nuk_from_rhok_T_Te(spec_t rhok, double T, double Te, spec_t nuk){
   
 }
 
-double _muk_from_rhok_Tk_Ek_gnoffo(spec_t rhok, double Tk, double Ek, long k){
+double _muk_from_rhok_Tk_Ek(spec_t rhok, double Tk, double Ek, long k){
   
 }
 
-void find_dmuk_from_rhok_Tk_Ek_gnoffo(spec_t rhok, double Tk, double Ek, long k, double *dmukdTk, spec_t dmukdrhok){
+void find_dmuk_from_rhok_Tk_Ek(spec_t rhok, double Tk, double Ek, long k, double *dmukdTk, spec_t dmukdrhok){
 
 }
 
